Fix layout issues causing the canvas to have an increasing height/width ratio. Update to 'react-babylonjs' 0.4.1, which has bug fixes for resizing engine to fix GUI 2D button locations being off.

--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     touch-action: none;
+    max-height: 500px;
 }
 
 .navbar {
